entertainment projects added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1984,6 +1984,10 @@ input, select, textarea {
 				font-size: 6em;
 			}
 
+		.fab.fa-js-square {
+			font-size: 6em;
+		}
+
 /* Wrappers */
 
 	.wrapper {
