--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1983,11 +1983,21 @@ input, select, textarea {
 			.icon.featured:before {
 				font-size: 6em;
 			}
-
+		
+		.fab.fa-python,
 		.fab.fa-js-square {
 			font-size: 6em;
 		}
 
+		.sequelize-span {
+			height: 96px;
+			width: 96px;
+			
+		}
+		.sequelize-icon {
+			height: auto;
+			width: inherit;
+		}
 /* Wrappers */
 
 	.wrapper {
