project descriptions added and about section filled in but probably needs cutting

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2437,6 +2437,10 @@ input, select, textarea {
 				margin: 0;
 			}
 
+		.container.about-text > #p {
+			text-align: left;
+		}
+
 		/* Copyright */
 
 			#copyright {
